[project]
name = "mist-skills"
version = "0.1.0"
description = "Anthropic Agent Skills for mist stock analysis backend"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "tomli>=2.0",
]

[tool.setuptools]
packages = ["shared"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["shared", "skills", "tests"]
exclude = [".venv", ".uv-cache", ".ruff_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
